added arrow guides

--- a/Turbah/Turbah.rcproject/com.apple.RCFoundation.Project
+++ b/Turbah/Turbah.rcproject/com.apple.RCFoundation.Project
@@ -108,6 +108,7 @@
                       ]
                     }
                   },
+                  "CE5D236B-4CC8-4824-AD76-5D2AE3864CDD" : null,
                   "Cube" : null
                 },
                 "factory" : null,
