more changes, still need to make where turbah is placed on qibla

--- a/Turbah/Turbah.rcproject/com.apple.RCFoundation.Project
+++ b/Turbah/Turbah.rcproject/com.apple.RCFoundation.Project
@@ -84,6 +84,13 @@
                             "typeName" : "UUID",
                             "value" : "62D90E74-DCA3-4107-B4ED-1EA14C81D2E6"
                           }
+                        ],
+                        [
+                          "entityName",
+                          {
+                            "typeName" : "String",
+                            "value" : "Turbah"
+                          }
                         ]
                       ]
                     },
@@ -138,9 +145,9 @@
                   0.32952204346656799,
                   0.88658159971237183,
                   0,
-                  -0.14448289573192596,
-                  0.18472878634929657,
-                  0.40614190697669983,
+                  -0.38866075873374939,
+                  0.79566890001296997,
+                  1.6300488710403442,
                   1
                 ],
                 "sceneTransform" : [
