--- a/Turbah/Info.plist
+++ b/Turbah/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>instagram</string>
@@ -27,7 +27,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>Grant access for AR to work.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Grant access for compass to work.</string>
+	<string>Your location will be used to determine the direction of the Ka’ba.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
